[gd_scene load_steps=7 format=3 uid="uid://biepmj0g46875"]

[ext_resource type="FontFile" uid="uid://ds8vphgs0s5my" path="res://dodge_assets/fonts/Xolonium-Regular.ttf" id="1_pdgqj"]
[ext_resource type="Script" path="res://hud.gd" id="1_rhlt2"]

[sub_resource type="FontVariation" id="FontVariation_uccph"]
base_font = ExtResource("1_pdgqj")

[sub_resource type="FontVariation" id="FontVariation_p1xv2"]
base_font = ExtResource("1_pdgqj")

[sub_resource type="InputEventAction" id="InputEventAction_2tpkh"]
action = &"ui_select"

[sub_resource type="Shortcut" id="Shortcut_rkp4y"]
events = [SubResource("InputEventAction_2tpkh")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rhlt2")

[node name="scoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.0
offset_right = 134.0
offset_bottom = 52.0
grow_horizontal = 2
size_flags_horizontal = 6
size_flags_vertical = 1
theme_override_fonts/font = SubResource("FontVariation_uccph")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="messageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -51.5
offset_right = 172.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_p1xv2")
theme_override_font_sizes/font_size = 32
text = "Desvie e sobreviva aos monstros!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="messageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="startButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -83.5
offset_top = -75.0
offset_right = 83.5
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_pdgqj")
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_rkp4y")
text = "Iniciar"

[connection signal="timeout" from="messageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
